# ddpdemo

./: CMakeLists.txt  README.md
cmake/: ddpdemoConfig.cmake.in
include/ddpdemo/: DataStore.hpp  FakeDataFrag.hpp  FakeDataReq.hpp  FakeTrigDec.hpp  FakeTrigInh.hpp  FakeTrigRec.hpp  HDF5DataReader.hpp  HDF5DataStore.hpp  HDF5FileUtils.hpp  HDF5KeyTranslator.hpp  KeyedDataBlock.hpp  StorageKey.hpp  TrashCanDataStore.hpp
include/ddpdemo/datagen/: Nljs.hpp  Structs.hpp
plugins/: DataGenerator.cpp  DataGenerator.hpp  DataTransferModule.cpp  DataTransferModule.hpp  FakeDataProd.cpp  FakeDataProd.hpp  FakeDataWriter.cpp  FakeDataWriter.hpp  FakeFragRec.cpp  FakeFragRec.hpp  FakeReqGen.cpp  FakeReqGen.hpp  FakeTrigDecEmu.cpp  FakeTrigDecEmu.hpp  GetAllKeysTest.cpp  HDF5DataStore.cpp  HDF5DataStore.hpp  SimpleDiskReader.cpp  SimpleDiskReader.hpp  SimpleDiskWriter.cpp  SimpleDiskWriter.hpp  TrashCanDataStore.cpp  TrashCanDataStore.hpp
schema/: data-generator-job.json  data-generator-job.jsonnet  data-generator-make.jsonnet  data-generator-schema.jsonnet  fake-minidaq-app.jsonnet  generate.sh  minidaq-app.jsonnet  moo_compile.note
src/: BinaryWriter.cpp  BinaryWriter.hpp  DataGenerator.cpp  DataGenerator.hpp  DataTransferModule.cpp  DataTransferModule.hpp  GetAllKeysTest.cpp  GetAllKeysTest.hpp  HDF5DataStore.hpp  HDF5KeyTranslator.hpp  SimpleDiskReader.cpp  SimpleDiskReader.hpp  SimpleDiskWriter.cpp  SimpleDiskWriter.hpp  StorageKey.cpp  TrashCanDataStore.cpp  TrashCanDataStore.hpp
test/: binary_writer_demo.json  data_combiner_demo.json  data_generator_demo.json  disk_reader_demo.json  disk_writer_demo.json  docs.md  fake-minidaq-app.json  get_all_keys_test.json  minidaq-app.json
unittest/: DataStoreFactory_test.cxx  HDF5Combiner_test.cxx  HDF5FileUtils_test.cxx  HDF5GetAllKeys_test.cxx  HDF5KeyTranslator_test.cxx  HDF5Read_test.cxx  HDF5WriteAndRead_test.cxx  HDF5Write_test.cxx  KeyedDataBlock_test.cxx  StorageKey_test.cxx
